--- a/sass/base/_defaults.sass
+++ b/sass/base/_defaults.sass
@@ -7,6 +7,7 @@ body
 	height: 130vh
 	font-family: $font-akrobatregular
 	font-size: 16px
+	overflow-x: hidden
 
 *
 	box-sizing: border-box
@@ -34,7 +35,7 @@ div.backup-logo
 a.hb-menu
 	color: $base-white
 	position: absolute
-	top: 23px
+	top: 10px
 	right: 25px
 	display: none
 
