--- a/sass/mediaqueries/_header-res.sass
+++ b/sass/mediaqueries/_header-res.sass
@@ -85,6 +85,12 @@
 				li
 					margin: 0px 17px
 
+@media only screen and (max-width: 681px)
+	header
+		nav
+			ul
+				li
+					margin: 0px 16px
 
 @media only screen and (max-width: 678px)
 	header
